# agentic-expense-manager

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  goal.md
api/: Dockerfile  pyproject.toml
api/.omc/state/: hud-state.json  last-tool-error.json
api/app/: config.py  db.py  errors.py  main.py  settings_keys.py  store.py
api/app/agent/: anthropic_provider.py  prompts.py  runtime.py  tools.py
api/app/channels/: base.py  whatsapp.py
api/app/routes/: audit.py  categories.py  chat.py  dashboard.py  google_auth.py  imports.py  profiles.py  recurring.py  settings.py  sync.py  transactions.py  whatsapp.py
api/tests/: conftest.py  test_agent_profile_tools.py  test_agent_prompt_loan.py  test_agent_tool_capabilities.py  test_agent_tools.py  test_api.py  test_app_error.py  test_audit.py  test_chat_import.py  test_chat_store.py  test_columns.py  test_db.py  test_dedup.py  test_drive_folders.py  test_duplicate_agent.py  test_duplicate_route.py  test_google_credentials.py  test_import_audit.py  test_import_profile.py  test_import_receipt_links.py  test_imports.py  test_legacy_migration.py  test_loan_flag.py  test_pdf_receipts.py  test_periods.py  test_profile_scoping.py  test_profile_targeting.py  test_profiles.py  test_prompt_loan_flow.py  test_receipt_download.py  test_recurring.py  test_regression_invariants.py  test_security.py  test_subcategories.py  test_sync.py  test_sync_adversarial.py  test_tax.py  test_transactions.py  test_vision.py  test_whatsapp_qr.py
api/tools/: drive_cleanup.py  verify_drive_e2e.py
(+70 files in other folders)
